# ks

./: README.md  ks-install.cabal  ks.hs  stack.yaml
src/: Main.hs
