name:                ks-install
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaeGon/ks-install
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          MichaeGon
copyright:           2016 MichaeGon
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ks-install
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory, filepath
